--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,10 @@ default: &default
 development:
   <<: *default
   database: Overtime_development
-
+  port: 5433
+  username: postgres
+  password: 12345
+  host: localhost
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -41,7 +44,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  #port: 5433
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -58,7 +61,10 @@ development:
 test:
   <<: *default
   database: Overtime_test
-
+  port: 5433
+  username: postgres
+  password: 12345
+  host: localhost 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
